--- a/src/app.pcss
+++ b/src/app.pcss
@@ -7,6 +7,8 @@ body {
     @apply bg-bg
     }
 
+* {touch-action: manipulation;}
+
 .btn {
     @apply bg-fg1  text-bg  rounded py-1 px-10 hover:bg-fg1/95 active:scale-95 transition-all
   }
