Fixed challenge button,

--- a/src/app.pcss
+++ b/src/app.pcss
@@ -20,7 +20,7 @@ body {
 }
 
 .popup {
-	@apply max-h-[100vh] overflow-scroll prose prose-invert my-auto h-fit max-w-[100vw] rounded-xl bg-bg1 p-7 drop-shadow-xl sm:max-w-[500px] sm:p-10;
+	@apply max-h-[100vh] overflow-scroll prose prose-invert my-auto h-fit w-[100vw] rounded-xl bg-bg1 p-7 drop-shadow-xl sm:w-[500px] sm:p-10;
 }
 
 .popup-container {
