--- a/src/app.pcss
+++ b/src/app.pcss
@@ -24,5 +24,5 @@ body {
 }
 
 .popup-container {
-	@apply fixed left-0 top-0 z-10 flex h-screen w-screen justify-center border bg-bg/10 align-middle backdrop-blur;
+	@apply fixed left-0 top-0 z-10 flex h-screen w-screen justify-center border bg-bg/10 align-middle backdrop-blur p-3;
 }
